--- a/Application/Resources/Base.lproj/Localizable.strings
+++ b/Application/Resources/Base.lproj/Localizable.strings
@@ -233,4 +233,4 @@ Last Updated: 2020-04-21 / v2.2 (65)
 "Favorites.BadFolder" = "This folder has already been moved or deleted.";
 "Favorites.Importing" = "Importing...";
 
-"Apps.NoWebApps" = "No Functions";
+"Apps.NoWebApps" = "Configure Apps on a computer.";
