--- a/Application/Resources/Base.lproj/Localizable.strings
+++ b/Application/Resources/Base.lproj/Localizable.strings
@@ -201,8 +201,8 @@ Last Updated: 2020-04-21 / v2.2 (65)
 
 "Online.ServiceAlreadyExists" = "Name In Use";
 "Online.BadName" = "Invalid Service Name";
-"Online.ChooseADifferentName" = "An online storage with the same name already exists.";
-"Online.IllegalName" = "Choose a unique name for this online storage. Do not use special characters.";
+"Online.ChooseADifferentName" = "A cloud storage with the same name already exists.";
+"Online.IllegalName" = "Choose a unique name for this cloud storage. Do not use special characters.";
 "Online.BadCredential" = "Missing Credentials";
 "Online.Verifying" = "Verifying...";
 "Online.ClipboardNoData" = "No Account or Connection String Detected";
