--- a/Application/Resources/Base.lproj/InfoPlist.strings
+++ b/Application/Resources/Base.lproj/InfoPlist.strings
@@ -5,11 +5,7 @@
   Created by Yi Ding on 4/21/20.
   
 */
-
-"CFBundleDisplayName" = "Personal Cloud";
+"CFBundleDisplayName" = "Personal House";
 "NSCameraUsageDescription" = "Allow Camera access to scan a QR code and connect to Personal Cloud or storage providers.";
-"NSPhotoLibraryUsageDescription" = "Allow Photos access to backup your photo library to a Personal Cloud.";
+"NSPhotoLibraryUsageDescription" = "Allow Photos access to backup your photo library.";
 "NSPhotoLibraryAddUsageDescription" = "Saving images to Photos may require access to Photos library.";
-"NSContactsUsageDescription" = "Assigning photos to contacts may require access to Contacts.";
-"NSLocationAlwaysUsageDescription" = "Personal Cloud uses your location changes to trigger synchronization between devices, thus requires \"Always\" access to your location. Granting \"While Using the App\" location access is the same as  \"Never\".";
-"NSLocationWhenInUseUsageDescription" = "Personal Cloud uses your location changes to trigger synchronization between devices, thus requires \"Always\" access to your location. Granting \"While Using the App\" location access is the same as  \"Never\".";
